# eXSimulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md
.github/workflows/: benchmark-and-quality.yml  build-and-test.yml  build.yml  ci.yml
dashboard/: README.md  package.json
docs/: DESIGN.md
fpga/: Makefile  README.md
fpga/constraints/: arty_z7_10.xdc
fpga/rtl/: exsim_types_pkg.sv  fifo_sync.sv
fpga/tb/: Makefile  test_fifo.py
include/agents/: agents.hpp
include/core/: order.hpp  trade.hpp  types.hpp
include/engine/: matching_engine.hpp  order_book.hpp  price_level.hpp
include/replay/: event_journal.hpp
include/utils/: histogram.hpp  memory_pool.hpp  spsc_queue.hpp  timing.hpp
logs/: 2026_02_23.txt
scripts/: benchmark.sh  flamegraph.sh  parse_feed.py  record_kraken.py
src/: feature_test.cpp  lob_export.cpp  main.cpp  micro_bench.cpp
src/agents/: market_maker.cpp  momentum.cpp  noise.cpp
src/core/: order.cpp  types.cpp
src/engine/: matching_engine.cpp  order_book.cpp  price_level.cpp
src/replay/: event_journal.cpp  replay_harness.cpp
src/tools/: replay_kraken.cpp
src/utils/: histogram.cpp  memory_pool.cpp  spsc_queue.cpp  timing.cpp
tests/: TESTING.md  queue_bench.cpp  test_order_book.cpp
tests/benchmarks/: matching_bench.cpp  order_book_bench.cpp  queue_bench.cpp
tests/unit/: histogram_test.cpp  order_book_test.cpp  order_test.cpp  spsc_queue_test.cpp
